--- a/css/style.css
+++ b/css/style.css
@@ -178,3 +178,60 @@ a {
   background-color: #ffffff;
 }
 /*SLIDER end*/
+
+/*SECTION POST*/
+
+.post__left {
+  width: 70%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.post__item {
+  max-width: 370px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 30px;
+}
+
+.post__info {
+  text-align: center;
+}
+
+.post__rubric {
+  text-transform: uppercase;
+  font-family: 'PT Sans', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: #C9A96E;
+  padding-top: 15px;
+
+}
+
+.post__title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  color: #171717;
+  margin: 10px auto;
+  width: 285px;
+}
+
+.post__date-author {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: #666666;
+  padding-bottom: 14px;
+}
+
+.post__date-author .by {
+  margin-left: 15px;
+  margin-right: 4px;
+  color: #B4B4B4;
+}
+/*SECTION POST end*/
