start to develop pagination

--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,9 @@ a {
 /*left*/
 .post__left {
   width: 67%;
+}
+
+.post__box {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
