--- a/css/style.css
+++ b/css/style.css
@@ -323,11 +323,48 @@ a {
 
 .categorie,
 .number {
-  font-family: PT Serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 19px;
   color: #666666;
+}
+/*PAGINATION*/
+.post__pagination {
+  max-width: 510px;
+  margin: 0 auto 50px auto;
+
+}
+
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 18px 15px 16px 15px;
+  border: 1px solid #B1B1B1;
+}
+
+.pagination-prev .pagination__link,
+.pagination-next .pagination__link {
+  font-family: 'PT Sans', sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 16px;
+  color: #171717;
+}
+
+.pagination-prev .pagination__link.disable {
+  color: #A2A2A2;
+}
+
+.pagination__item .pagination__link {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 16px;
+  line-height: 16px;
+  color: #171717;
+}
+
+.pagination__item + .pagination__item {
+  margin-left: 30px;
 }
 /*SECTION POST end*/
