--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,10 @@ a {
   margin-bottom: 30px;
 }
 
+.post__item:hover {
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.5);
+}
+
 .post__info {
   text-align: center;
 }
